experimental/addons/kubeflow/resources/ValidatingWebhookConfiguration-606.yaml
# Source: seldon-core-operator/templates/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: 'seldon-system/seldon-serving-cert'
  labels:
    app: seldon
    app.kubernetes.io/instance: 'seldon-core'
    app.kubernetes.io/name: 'seldon-core-operator'
    app.kubernetes.io/version: '1.12.0'
  name: seldon-validating-webhook-configuration-seldon-system
webhooks:
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    caBundle: 'LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURJekNDQWd1Z0F3SUJBZ0lRQkQvZFp0WHV0Rk1JNUVuTkJmOXBvVEFOQmdrcWhraUc5dzBCQVFzRkFEQWMKTVJvd0dBWURWUVFERXhGamRYTjBiMjB0YldWMGNtbGpjeTFqWVRBZUZ3MHlNVEV5TWpBd016VXpNVFJhRncweQpNakV5TWpBd016VXpNVFJhTUJ3eEdqQVlCZ05WQkFNVEVXTjFjM1J2YlMxdFpYUnlhV056TFdOaE1JSUJJakFOCkJna3Foa2lHOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQXJMVm5VcWpwZm4za296WFdoT3BISC9lWHlZa3gKcXdkcmpGVk93dVAzZ25NSFc3Uk5vMnJmNUtlZFN3Z3MybHJLaEh3YXlKYUpId1F2K2VBUlUxWmFneEgrZVRQcwpYc1BUT1ZpQXlYO [...]
    service:
      name: seldon-webhook-service
      namespace: 'seldon-system'
      path: /validate-machinelearning-seldon-io-v1-seldondeployment
  failurePolicy: Fail
  name: v1.vseldondeployment.kb.io
  namespaceSelector:
    matchExpressions:
    - key: seldon.io/controller-id
      operator: DoesNotExist
  objectSelector:
    matchExpressions:
    - key: seldon.io/controller-id
      operator: DoesNotExist
  rules:
  - apiGroups:
    - machinelearning.seldon.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - seldondeployments
  sideEffects: None
